--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/hms
+spring.datasource.url=jdbc:postgresql://localhost:5432/mrs
 spring.datasource.username=mrs
 spring.datasource.password=mrs
 spring.jpa.hibernate.ddl-auto = validate
